[project]
name = "proxlive"
version = "0.1.0"
description = "Fast multi-threaded python3 proxy checker supporting HTTP, HTTPS, SOCKS4, SOCKS5."
authors = [
    { name="Yubaraj Sarkar" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "requests",
    "pysocks"
]

[project.scripts]
proxlive = "proxlive.cli:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
